--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,23 +1,23 @@
 .container
   .col-md-9
-    %h2 Sign up
+    %h2= t('.title')
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = render 'devise/shared/error_messages', resource: resource
       .form-group
-        = f.label :username
+        = f.label :username, t('.label.username')
         = f.text_field :name, autofocus: true, class: 'form-control'
       .form-group
-        = f.label :email
+        = f.label :email, t('.label.email')
         = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
       .form-group
-        = f.label :password
+        = f.label :password, t('.label.password')
         - if @minimum_password_length
           %em
-            (#{@minimum_password_length} characters minimum)
+            = t('.character-limit', limit: @minimum_password_length)
         = f.password_field :password, autocomplete: 'new-password', class: 'form-control'
       .form-group
-        = f.label :password_confirmation
+        = f.label :password_confirmation, t('.label.password_confirmation')
         = f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'
       .actions
-        = f.submit 'Sign up', class: 'btn btn-primary'
+        = f.submit t('.submit'), class: 'btn btn-primary'
     = render 'devise/shared/links'
