--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,18 +1,19 @@
 .container
   .col-md-9
-    %h2 Change your password
+    %h2= t.('.title')
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
       = render 'devise/shared/error_messages', resource: resource
       = f.hidden_field :reset_password_token
       .form-group
-        = f.label :password, 'New password'
+        = f.label :password, t('.label.password')
         - if @minimum_password_length
           %em
+          = t.('.characters-limit', limit:@minimum_password_length)
             (#{@minimum_password_length} characters minimum)
         = f.password_field :password, autofocus: true, autocomplete: 'new-password', class: 'form-control'
       .form-group
-        = f.label :password_confirmation, 'Confirm new password'
+        = f.label :password_confirmation, t('.label.password_confirmation')
         = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
       .actions
-        = f.submit 'Change my password', class: 'btn btn-primary'
+        = f.submit t('.submit'), class: 'btn btn-primary'
     = render 'devise/shared/links'
