--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,11 +1,11 @@
 .container
   .col-md-9
-    %h2 Forgot your password?
+    %h2= t.('.title')
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
       = render 'devise/shared/error_messages', resource: resource
       .form-group
-        = f.label :email
+        = f.label :email, t('.label.email')
         = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
       .actions
-        = f.submit 'Send me reset password instructions', class: 'btn btn-primary'
+        = f.submit t('.submit'), class: 'btn btn-primary'
     = render 'devise/shared/links'
