--- a/app/views/devise/mailer/confirmation_instructions.html.haml
+++ b/app/views/devise/mailer/confirmation_instructions.html.haml
@@ -1,4 +1,4 @@
 %p
-  Welcome #{@email}!
-%p You can confirm your account email through the link below:
-%p= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token)
+  = t('.title', email: @email)
+%p= t('.confirm-text')
+%p= link_to t('.confirm-account'), confirmation_url(@resource, confirmation_token: @token)
