--- a/app/views/devise/mailer/password_change.html.haml
+++ b/app/views/devise/mailer/password_change.html.haml
@@ -1,3 +1,4 @@
 %p
-  Hello #{@resource.email}!
-%p We're contacting you to notify you that your password has been changed.
+  = t('.title', email: @resource.email)Hello #{}!
+%p
+  = t('.text.change-password-text')
