--- a/app/views/devise/mailer/unlock_instructions.html.haml
+++ b/app/views/devise/mailer/unlock_instructions.html.haml
@@ -1,5 +1,7 @@
 %p
-  Hello #{@resource.email}!
-%p Your account has been locked due to an excessive number of unsuccessful sign in attempts.
+  = t('.title', email: @resource.email)
+%p
+  = t('.text.information-why-locked')
 %p Click the link below to unlock your account:
-%p= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token)
+  = t('.text.instruction')
+%p= link_to t('.link'), unlock_url(@resource, unlock_token: @token)
