Fix missing literals

--- a/app/views/devise/mailer/email_changed.html.haml
+++ b/app/views/devise/mailer/email_changed.html.haml
@@ -2,7 +2,7 @@
   = t('.title', email: @email)
 - if @resource.try(:unconfirmed_email?)
   %p
-    = t('.unconfirmed-email-change-text' email: @resource.unconfirmed_email)
+    = t('.unconfirmed-email-change-text', email: @resource.unconfirmed_email)
 - else
   %p
-      = t('.email-change-text' email: @resource.email)
+      = t('.email-change-text', email: @resource.email)
