--- a/app/views/devise/mailer/password_change.html.haml
+++ b/app/views/devise/mailer/password_change.html.haml
@@ -1,4 +1,2 @@
-%p
-  = t('.title', email: @resource.email)Hello #{}!
-%p
-  = t('.text.change-password-text')
+%p= t('.title', email: @resource.email)
+%p= t('.text.change-password-text')
