--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,9 +1,5 @@
-%p
-  = t('.title', email: @resource.email)
-%p
-  = t('.text.information')
-%p= link_to '.change-password', edit_password_url(@resource, reset_password_token: @token)
-%p
-  = t('.text.ignore')
-%p 
-  = t('.text.information-about-link')
+%p= t('.title', email: @resource.email)
+%p= t('.text.information')
+%p= link_to t('.change-password'), edit_password_url(@resource, reset_password_token: @token)
+%p= t('.text.ignore')
+%p= t('.text.information-about-link')
