--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,6 +1,6 @@
 .container
   .col-md-9
-    %h2= t.('.title')
+    %h2= t('.title')
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
       = render 'devise/shared/error_messages', resource: resource
       .form-group
