--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,5 +1,5 @@
 - if controller_name != 'sessions'
-  = link_to t.('.log-in'), new_session_path(resource_name)
+  = link_to t('.log-in'), new_session_path(resource_name)
   %br
 - if devise_mapping.registerable? && controller_name != 'registrations'
   = link_to t('.sign-up'), new_registration_path(resource_name)
