--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,4 @@
-%h1 Welcome#index
-%p Find me in app/views/welcome/index.html.haml
-
-- if  signed_in?
-  = link_to 'Log out', destroy_user_session_path, method: :delete
+- if  user_signed_in?
+  = link_to t('.log-out'), destroy_user_session_path, method: :delete
+- else
+  = link_to t('.log-in'), new_user_session_path
