Setup simple flatpickr range inputs

--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,10 +1,14 @@
 %h1 Hello, pass ypur trips please.
 
+.container
 
-= simple_form_for Trip.new, class: 'trip-create-form', remote: true do |f|
-  = f.input :started_at, as: :string, wrapper: :date
-  = f.input :ended_at, as: :string, wrapper: :date
-  = f.button :submit, class: 'btn btn-primary', id: 'submit-btn'
+  = simple_form_for Trip.new, class: 'trip-create-form', remote: true do |f|
+    = f.input :started_at, as: :string
+    = f.input :ended_at, as: :string
+    %i.fa.fa-calendar
+    %br
+    %br
+    = f.button :submit, class: 'btn btn-primary', id: 'submit-btn'
 
 - @trips.each do |trip|
   = render 'trip', trip: trip
