--- a/app/views/trips/create.js.erb
+++ b/app/views/trips/create.js.erb
@@ -1,3 +1,3 @@
-$('#new_trip').after("<%= j render 'trip', trip: @trip %>")
+$('#trips').prepend("<%= j render 'trip', trip: @trip %>")
 $('#trip_started_at').val('')
 $('#trip_ended_at').val('')
