--- a/app/views/trips/edit.js.erb
+++ b/app/views/trips/edit.js.erb
@@ -1,12 +1,5 @@
 $('#trip-<%= @trip.id %>').replaceWith("<%= j render 'edit', trip: @trip %>");
 
 $(document).ready(function(){
-  $('#edit_trip_<%= @trip.id %> .fa-calendar').flatpickr({
-    mode: "range",
-    onChange: function(selectedDates, dateStr, instance){
-      const dates = selectedDates.map(date => this.formatDate(date, "Y-m-d"));
-      $('#edit_trip_<%= @trip.id %> #trip_started_at').val(dates[0]);
-      $('#edit_trip_<%= @trip.id %> #trip_ended_at').val(dates[1]);
-    },
-  });
+  window.setupDatePicker('#edit_trip_<%= @trip.id %>');
 });
