Scope addition and minor cleanups

--- a/app/views/trips/edit.js.erb
+++ b/app/views/trips/edit.js.erb
@@ -1,4 +1,4 @@
-$('#trip-<%= @trip.id %>').replaceWith("<%= j render 'edit', trip: @trip %>");
+$('#trip_<%= @trip.id %>').replaceWith("<%= j render 'edit', trip: @trip %>");
 
 $(document).ready(function(){
   window.setupDatePicker('#edit_trip_<%= @trip.id %>');
