--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -2,8 +2,8 @@
   .p-2
     %i.fa.fa-calendar
   .p-2
-    = f.input :started_at, placeholder: 'Start date', label: false , as: :string, readonly: true
+    = f.input :started_at, placeholder: t('.placeholder.started_at'), label: false , as: :string, readonly: true
   .p-2
-    = f.input :ended_at, placeholder: 'End date', label: false , as: :string, readonly: true
+    = f.input :ended_at, placeholder: t('.placeholder.ended_at'), label: false , as: :string, readonly: true
   .ml-auto.p-2
-    = f.button :submit, class: 'btn btn-primary', id: 'submit-btn'
+    = f.button :submit, t('.submit'), class: 'btn btn-primary', id: 'submit-btn'
