--- a/app/views/trips/_trip.html.haml
+++ b/app/views/trips/_trip.html.haml
@@ -1,13 +1,13 @@
 .d-flex[trip]
   .p-2
-    %label start:
+    %label= t('.label.started_at')
     %span= trip.started_at&.strftime('%B %d, %Y')
   .p-2
-    %label end:
+    %label= t('.label.ended_at')
     %span= trip.ended_at&.strftime('%B %d, %Y')
   .p-2
-    %label duration:
+    %label= t('.label.duration')
     %span= trip.duration
   .ml-auto.p-2
-    = link_to 'Delete trip', trip, remote: true, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
-    = link_to 'Edit', edit_trip_path(trip) , remote: true, class: 'btn btn-primary'
+    = link_to t('.button.delete'), trip, remote: true, method: :delete, data: { confirm: t('.delete-confirm') }, class: 'btn btn-danger'
+    = link_to t('.button.edit'), edit_trip_path(trip) , remote: true, class: 'btn btn-primary'
