--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,11 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body
+    - if  user_signed_in?
+      = link_to t('.log-out'), destroy_user_session_path, method: :delete
+    - else
+      = link_to t('.log-in'), new_user_session_path
+
+    = render 'layouts/flash'
+
     = yield
