--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -6,4 +6,4 @@
   .p-2
     = f.input :ended_at, placeholder: t('.placeholder.ended_at'), label: false , as: :string, readonly: true
   .ml-auto.p-2
-    = f.button :submit, t('.submit'), class: 'btn btn-primary', id: 'submit-btn'
+    = f.button :submit, t('.submit'), class: 'btn btn-primary'
