--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for trip, remote: true, html: { class: 'form-inline d-flex' } do |f|
   .p-2
-  = f.association :countries, collection: Country.all, label: false, input_html: {class: 'country-selcect2'}
+  = f.association :countries, collection: Country.all, label: false, input_html: {class: 'country-chosen'}
   .p-2
     %i.fa.fa-calendar
   .p-2
@@ -8,4 +8,4 @@
   .p-2
     = f.input :ended_at, placeholder: t('.placeholder.ended_at'), label: false , as: :string, readonly: true
   .ml-auto.p-2
-    = f.button :submit, t('.submit'), class: 'btn btn-primary'
+    = f.button :submit, class: 'btn btn-primary'
