--- a/app/views/trips/edit.js.erb
+++ b/app/views/trips/edit.js.erb
@@ -1,6 +1,6 @@
 $('#trip_<%= @trip.id %>').replaceWith("<%= j render 'edit', trip: @trip %>");
 
 $(document).ready(function(){
-  window.setChosen('#edit_trip_<%= @trip.id %>')
+  window.setupCountriesSelect()
   window.setupDatePicker('#edit_trip_<%= @trip.id %>');
 });
