--- a/app/views/trips/_trip.html.haml
+++ b/app/views/trips/_trip.html.haml
@@ -13,3 +13,6 @@
   .ml-auto.p-2
     = link_to t('.button.delete'), trip, remote: true, method: :delete, data: { confirm: t('.delete-confirm') }, class: 'btn btn-danger'
     = link_to t('.button.edit'), edit_trip_path(trip) , remote: true, class: 'btn btn-primary'
+  - if trip.within_breakpoint?
+    before - #{trip.before_breakpoint}
+    after - #{trip.after_breakpoint}
