ordering of existing trips on index page

--- a/app/assets/stylesheets/trip.scss
+++ b/app/assets/stylesheets/trip.scss
@@ -3,9 +3,9 @@
 }
 
 .active-trips {
-  color: black;
+  background-color: white;
 }
 
 .not-active-trips {
-  color: grey;
+  background-color: #e9ecef;
 }
