--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,5 +1,8 @@
 %h1 This is index page for user
 
+.col-md-12
+  = render 'shared/admin/search_form', resource: :users
+
 - @users.each do |user|
   .p-2
   %label= user.name
@@ -10,7 +13,7 @@
     %label= 'User email: '
     %span= user.email
   .p-2
-    %label= 'User email: '
+    %label= 'If is admin?: '
     %span= user.admin
   .p-2
     = link_to 'Change Admin', [:edit, :admin, user]
