--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,22 +5,24 @@
     %title Travels
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'admin', 'data-turbolinks-track': 'reload'
 
   %body
-    %nav.navbar.navbar-expand-lg.navbar-light.bg-light.d-flex
-      .mr-auto.p-2
-        %span= link_to 'Admin Panel', admin_countries_path
-      .p-2
-        %span= link_to 'Countries', admin_countries_path, class: 'btn btn-info'
-      .p-2
-        %span= link_to 'Users', admin_users_path, class: 'btn btn-info'
-      .p-2
-        %span= "Your email: #{current_user.email}"
-      .p-2
-        - if  user_signed_in?
-          = link_to t('.log-out'), destroy_user_session_path, method: :delete
-        - else
-          = link_to t('.log-in'), new_user_session_path
-    = yield
+    %nav.navbar.navbar-expand-lg.navbar-light.bg-light
+      .container
+        %a.navbar-brand{ href: '#' } Travelator
+        .navbar-collapse
+          %ul.navbar-nav
+            %li.nav-item
+              = link_to 'Countries', [:admin, :countries], class: 'nav-link'
+            %li.nav-item
+              = link_to 'Users', [:admin, :users], class: 'nav-link'
+        %ul.navbar-nav
+          %li.nav-item
+            = link_to 'Logout', destroy_user_session_path, method: :delete
+
+    .container-fluid
+      = render 'shared/flash_messages'
+      .container
+        = yield
