--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,20 +1,25 @@
-%h1 This is index page for user
+#heading-container
+  .d-flex.flex-row.justify-content-between
+    %h1 Users
+    = link_to 'New User', new_admin_country_path, class: 'btn btn-primary align-self-center'
 
-.col-md-12
-  = render 'shared/admin/search_form', resource: :users
+  = render 'admin/components/search', model_name: :users
 
-- @users.each do |user|
-  .p-2
-  %label= user.name
-  .p-2
-    %label= 'User id is:'
-    %span= user.id
-  .p-2
-    %label= 'User email: '
-    %span= user.email
-  .p-2
-    %label= 'If is admin?: '
-    %span= user.admin
-  .p-2
-    = link_to 'Change Admin', [:edit, :admin, user]
-  %hr
+%table.table.table-hover
+  %thead
+    %tr
+      %th= order_by_link 'Id'
+      %th= order_by_link 'Name'
+      %th= order_by_link 'Email'
+      %th= order_by_link 'Admin'
+      %th
+
+  %tbody
+    - @users.each do |user|
+      %tr
+        %td= link_to user.id, [:admin, user]
+        %td= user.name
+        %td= user.email
+        %td= user.admin
+        %td.text-right
+          = render 'admin/components/view_edit_delete', object: user
