add paginate to users and countries in admin page, create helper for paginate

--- a/app/views/admin/countries/index.html.haml
+++ b/app/views/admin/countries/index.html.haml
@@ -19,3 +19,5 @@
         %td= country.name
         %td.text-right
           = render 'admin/components/view_edit_delete', object: country
+
+= paginate @countries
