--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 This is edit page for users
+%h1= @user.name
 
 = simple_form_for [:admin, @user] do |f|
   = f.input_field :admin, as: :boolean
-  = f.submit
+  = f.button :submit, t('.submit'), class: 'btn btn-primary'
