--- a/app/views/admin/components/_search.html.haml
+++ b/app/views/admin/components/_search.html.haml
@@ -1,2 +1,2 @@
 = form_tag [:admin, model_name], method: 'get' do
-  = text_field_tag :query, params[:query], placeholder: 'Search...', class: 'form-control'
+  = text_field_tag :query, params[:query], placeholder: t('.placeholder'), class: 'form-control'
