--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type'}
-    %title Travels
+    %title Travelator
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -10,8 +10,8 @@
 
   %body
     - if  user_signed_in?
-      = link_to t('.log-out'), destroy_user_session_path, method: :delete
+      = link_to t('.logout'), destroy_user_session_path, method: :delete
     - else
-      = link_to t('.log-in'), new_user_session_path
+      = link_to t('.login'), new_user_session_path
     = render 'layouts/flash'
     = yield
