--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -11,7 +11,7 @@
   %body
     %nav.navbar.navbar-expand-lg.navbar-light.bg-light
       .container
-        %a.navbar-brand{ href: '#' } Travelator
+        = link_to 'Travelator', root_path, class: 'navbar-brand'
         .navbar-collapse
           %ul.navbar-nav
             %li.nav-item
