--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,22 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body
-    - if  user_signed_in?
-      = link_to t('.logout'), destroy_user_session_path, method: :delete
-    - else
-      = link_to t('.login'), new_user_session_path
+    %nav.navbar.navbar-expand-lg.navbar-light.bg-light
+      .container
+        = link_to 'Travelator', root_path, class: 'navbar-brand'
+        %ul.navbar-nav
+          - if user_signed_in?
+            -if current_user.admin?
+              %li.p-2.nav-item
+                = link_to 'Admin panel', [:admin, @countries], class: 'nav-link'
+              %li.p-2.nav-item
+                %span.navbar-text= current_user.name
+              %li.p-2.nav-item
+                %img.rounded-circle{alt: "Profile image", src: "#{current_user.image}",style: "width:50px;height:50px;"}
+              %li.p-2.nav-item
+                = link_to t('.logout'), destroy_user_session_path, method: :delete, class: 'nav-link'
+          - else
+            %li.nav-item
+              = link_to t('.login'), new_user_session_path, class: 'nav-link'
     = render 'layouts/flash'
     = yield
