--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,9 @@
 @import 'font-awesome';
 @import 'flatpickr';
 @import 'chosen';
-@import 'trip'
+@import 'trip';
+
+.profile-image-size {
+  width: 40px;
+  height: 40px;
+}
