--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,18 +14,19 @@
         = link_to t('app.title'), root_path, class: 'navbar-brand'
         %ul.navbar-nav
           - if user_signed_in?
-            %li.p-2.nav-item= current_user.name
+            %li.p-2.nav-item
+              = current_user.name
             .dropdown
               .dropdown-toggle{'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown'}
                 %img.rounded-circle.profile-image{ src: "#{current_user.image}" }
               .dropdown-menu{'aria-labelledby' => 'dropdownMenuButton'}
-
                 - if current_user.admin?
                   %li.nav-item
                     = link_to t('.links.admin'), admin_path, class: 'nav-link'
                   .dropdown-divider
                 %li.nav-item
                   = link_to t('.logout'), destroy_user_session_path, method: :delete, class: 'nav-link'
+
           - else
             %li.nav-item
               = link_to t('.login'), new_user_session_path, class: 'nav-link'
