add fonts and change icons on trips page

--- a/app/views/trips/_trip.html.haml
+++ b/app/views/trips/_trip.html.haml
@@ -17,5 +17,11 @@
   .p-2.font-italic
     = "( #{trip.country_names} )"
   .ml-auto.p-2
-    = link_to t('.button.delete'), trip, remote: true, method: :delete, data: { confirm: t('.delete-confirm') }, class: 'btn btn-danger'
-    = link_to t('.button.edit'), edit_trip_path(trip) , remote: true, class: 'btn btn-primary'
+    = link_to edit_trip_path(trip) , remote: true, class: 'btn btn-primary btn-icon-split' do
+      %span.icon.text-white-50
+        %i.fas.fa-edit
+      %span.text= t('.button.edit')
+    = link_to '<i class="fa fa-trash"></i>'.html_safe, trip, remote: true, method: :delete, data: { confirm: t('.delete-confirm') }, class: 'btn btn-danger btn-circle margin-left'
+    -# = link_to '<i class="icon-ok icon-white"></i> Do it@'.html_safe, user_path(@user)
+-# <i class="far fa-trash-alt"></i>
+    -# t('.button.delete')
