--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,23 +1,37 @@
 .container
-  .col-md-9
-    %h2= t('.title')
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = render 'devise/shared/error_messages', resource: resource
-      .form-group
-        = f.label :username, t('.label.username')
-        = f.text_field :name, autofocus: true, class: 'form-control'
-      .form-group
-        = f.label :email, t('.label.email')
-        = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
-      .form-group
-        = f.label :password, t('.label.password')
-        - if @minimum_password_length
-          %em
-            = t('.character-limit', limit: @minimum_password_length)
-        = f.password_field :password, autocomplete: 'new-password', class: 'form-control'
-      .form-group
-        = f.label :password_confirmation, t('.label.password_confirmation')
-        = f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'
-      .actions
-        = f.submit t('.submit'), class: 'btn btn-primary'
-    = render 'devise/shared/links'
+  .card.o-hidden.border-0.shadow-lg.my-5
+    .card-body.p-0
+      .row
+        .col-lg-5.d-none.d-lg-block.bg-register-image
+        .col-lg-7
+          .p-5
+            .text-center
+              %h4.text-gray-900.mb-4= t('.title')
+            .user
+              = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+                = render 'devise/shared/error_messages', resource: resource
+                .form-group
+                  = f.label :username, t('.label.username')
+                  = f.text_field :name, autofocus: true, class: 'form-control'
+                .form-group
+                  = f.label :email, t('.label.email')
+                  = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
+                .form-group.row
+                  .col-sm-6.mb-3.mb-sm-0
+                    = f.label :password, t('.label.password')
+                    - if @minimum_password_length
+                      %em
+                        = t('.character-limit', limit: @minimum_password_length)
+                    = f.password_field :password, autocomplete: 'new-password', class: 'form-control'
+                  .col-sm-6
+                    = f.label :password_confirmation, t('.label.password_confirmation')
+                    = f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'
+                .actions
+                  = f.submit t('.submit'), class: 'btn btn-primary btn-user btn-block'
+              %hr
+                = link_to t('.sign-up.google'), user_google_oauth2_omniauth_authorize_path, class: 'btn btn-google btn-user btn-block'
+                %br
+                = link_to t('.sign-up.facebook'), user_facebook_omniauth_authorize_path, class: 'btn btn-facebook btn-user btn-block'
+              %hr
+              .text-center
+                = render 'devise/shared/links'
