--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,11 +1,25 @@
 .container
-  .col-md-9
-    %h2= t('.title')
-    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-      = render 'devise/shared/error_messages', resource: resource
-      .form-group
-        = f.label :email, t('.label.email')
-        = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
-      .actions
-        = f.submit t('.submit'), class: 'btn btn-primary'
-    = render 'devise/shared/links'
+  .row.justify-content-center
+    .col-xl-10.col-lg-12.col-md-9
+      .card.o-hidden.border-0.shadow-lg.my-5
+        .card-body.p-0
+          .row
+            .col-lg-6.d-none.d-lg-block.bg-password-image
+            .col-lg-6
+              .p-5
+                .text-center
+                  %h4.text-gray-900.mb-2
+                    = t('.title')
+                  .mb-4
+                    = t('.statement')
+                .user
+                  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+                    = render 'devise/shared/error_messages', resource: resource
+                    .form-group
+                      = f.label :email, t('.label.email')
+                      = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
+                    .actions
+                      = f.submit t('.submit'), class: 'btn btn-primary btn-user btn-block'
+                    %hr
+                  .text-center
+                    = render 'devise/shared/links'
