Fix problem with input fields on error

--- a/app/assets/stylesheets/trip.scss
+++ b/app/assets/stylesheets/trip.scss
@@ -13,3 +13,15 @@
 .margin-left {
   margin-left: 10px;
 }
+
+
+.trip_started_at {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+.trip-form {
+  align-items: baseline;
+  width: 100%;
+}
