--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for trip, remote: true, html: { class: 'form-inline d-flex' } do |f|
+= simple_form_for trip, remote: true, html: { class: 'd-flex trip-form' } do |f|
   .p-2
     = f.association :countries, collection: Country.all, label: false, input_html: { class: 'country-chosen',  data: { placeholder: t('.placeholder.countries') } }
   .p-2
